Fix spacing in team section, remove initial parallax section after nav

--- a/source/stylesheets/styles.css.scss
+++ b/source/stylesheets/styles.css.scss
@@ -281,3 +281,8 @@ footer{
   text-align: center;
 }
 
+.slide_container {
+  width: 80%;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
